--- a/client/src/components/Square.css
+++ b/client/src/components/Square.css
@@ -15,6 +15,7 @@
   margin:0.06px;
 }
 
+
 .blackPeice {
   width:72px;
   padding-bottom: 72px;
@@ -22,3 +23,8 @@
   border-radius: 50%;
   margin:0.06px;
 }
+
+.selected {
+  border: 3px solid yellow
+}
+
